--- a/index.html
+++ b/index.html
@@ -21,10 +21,34 @@
 
         
         <div class="form-container">
+            <p>This is not a real online service! You know you need something like this in your life
+                to help you realize your deepest dreams. Sign up <em> now </em> to get started
+            </p>
+            <p>You know you want to</p>
             <form action="" method="post">
                 <label for="first-name">First Name</label>
                 <input type="text" name="first-name" id="first-name">
+
+                <label for="last-name">Last Name</label>
+                <input type="text" name="last-name" id="last-name">
+
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email">
+
+                <label for="phone-number">Phone Number</label>
+                <input type="tel" name="phone-number" id="phone-number">
+
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password">
+
+                <label for="confirm-password">Confirm Password</label>
+                <input type="password" name="confirm-password" id="confirm-password">
+
+                
+                <button type="submit">Create Account</button>
             </form>
+
+            <p>Already have an account? <a href="">Log In</a></p>
         </div>
     </div>
 </body>
